# phangs2caom2

./: Dockerfile  README.md  setup.cfg
blank2caom2/: composable.py  main_app.py
blank2caom2/tests/: test_composable.py  test_main_app.py
phangs2caom2/: __init__.py  composable.py  composed.py  main_app.py
phangs2caom2/tests/: test_composable.py  test_main_app.py  test_storage_name.py
phangs2caom2/tests/data/: 7m+tp_co21_pbcorr_trimmed_k.expected.xml  PHANGS-ALMA.fits.header  PHANGS-ALMA_derived.fits.header  config.yml  ngc2903_12m+7m+tp_co21.expected.xml  ngc2903_12m+7m+tp_co21.fits.header  ngc2903_12m+7m+tp_co21_2as.fits.header  ngc2903_12m+7m+tp_co21_2as_broad_emom0.fits.header  ngc2903_12m+7m+tp_co21_2as_broad_mom0.fits.header  ngc2903_12m+7m+tp_co21_2as_broad_tpeak.fits.header  ngc2903_12m+7m+tp_co21_2as_coverage.fits.header  ngc2903_12m+7m+tp_co21_2as_noise.fits.header  ngc2903_12m+7m+tp_co21_2as_strict_eew.fits.header  ngc2903_12m+7m+tp_co21_2as_strict_emom0.fits.header  ngc2903_12m+7m+tp_co21_2as_strict_emom1.fits.header  ngc2903_12m+7m+tp_co21_2as_strict_emom2.fits.header  ngc2903_12m+7m+tp_co21_2as_strict_ew.fits.header  ngc2903_12m+7m+tp_co21_2as_strict_mom0.fits.header  ngc2903_12m+7m+tp_co21_2as_strict_mom1.fits.header  ngc2903_12m+7m+tp_co21_2as_strict_mom2.fits.header  ngc2903_12m+7m+tp_co21_2as_strictmask.fits.header  ngc2903_12m+7m+tp_co21_broad_emom0.fits.header  ngc2903_12m+7m+tp_co21_broad_mom0.fits.header  ngc2903_12m+7m+tp_co21_broad_tpeak.fits.header  (+59 more)
scripts/: blank_run.sh  config.yml  docker-entrypoint.sh  phangs_run.sh
